--- a/app/views/events/search.html.erb
+++ b/app/views/events/search.html.erb
@@ -7,17 +7,23 @@
   <p>検索結果<%= @events.count %>件</p>
   <div class="search-container">
         <ul class=""> 
-    <% @events.each_with_index do |e| %>
-    <%# <div class="search-content" data-turbolinks="false">  %>
-      
-          <%# <% g.events.order("RANDOM()").limit(6).each do |event|  %>
-         
+    <% @events.each_with_index do |event| %>         
            <li class="swiper-slide" alt="">
-            
-            <img src="/assets/catmovie.png">
-            <p><%= e.event_title %></p>
-            <p><%= e.user.name %></p>
-           </li>
+            <div class="event-thumbnail">
+                <div class="event-thumb-image">
+                  <% if event.event_image_name.size == 0 %>
+                    <%= image_tag "/assets/catman" %>
+                  <% else %>
+                    <%= image_tag event.event_image_name.url %>
+                  <% end %>
+                </div>
+                <div class="event-thumb-text">
+                  <%= link_to "/events/#{event.id}" do %>
+                    <h3><%= event.event_title %></h2>
+                    <p><%= event.content %></p>
+                  <% end %>
+                </div>
+              </div> 
          
     
     <% end %>
